# rcpadv-dashboard

./: .env.example  .gitignore  README.md  pyproject.toml  run.sh
app/: config.py  logger.py  main.py
app/queries/: _base.py  developer_ids.py  dram_queries.py  es_queries.py  log_search_queries.py  login_history_queries.py  vnand_queries.py
app/repositories/: es_client.py  mariadb.py
app/routers/: _templating.py  auth.py  dram.py  eqp_if.py  es.py  files.py  home.py  log_search.py  login_history.py  logs.py  vnand.py  well_known.py
app/services/: _sql_runner.py  dram_service.py  es_service.py  log_search_service.py  login_history_service.py  vnand_service.py
app/static/css/: app.css
app/static/js/: app.js
app/templates/: _log_panel.html  _sidebar.html  base.html  eqp_if.html  files.html  home.html  log_search.html  login.html  login_history.html  source_page.html
docs/: AGENTS.md  ARCHITECTURE.md  AUTH.md  CHANGELOG.md  DASHBOARD.md  DEVELOPMENT.md  EQP_IF.md  FRONTEND.md  LOGIN_HISTORY.md  LOG_SEARCH.md  QUERY_SYSTEM.md  README.md  WELL_KNOWN.md
